--- a/index.html
+++ b/index.html
@@ -1,22 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>My Landing Page</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header class="hero">
+    <img src = "images/logo.png" alt = "Logo" id = "logo-img">
     <h1>GreenSense</h1>
     <p>Smart Insights for Small Greenhouse Farmers</p>
     <button class="cta">Get Started</button>
   </header>
 
   <section class="features">
-    <div class="feature-card">Feature 1</div>
-    <div class="feature-card">Feature 2</div>
-    <div class="feature-card">Feature 3</div>
+    <div class="feature-card">
+      <h2> Transaction Tracking System </h2 >
+      <p> Records all farm purchases (seeds, fertilizer, soil, etc.) </p>
+      <p> Logs all sales to markets, restaurants, or subscription boxes </p>
+      <p> Accessible via mobile phone or computer </p>
+      <p> Simple input interface for non-tech-savvy users </p>
+    </div>
+
+    <div class="feature-card">
+      <h2> A.I. Powered Analytics Engine </h2 >
+      <p>  </p>
+      <p>  </p>
+      <p>  </p>
+      <p>  </p>
+    </div>
+
+    <div class="feature-card">
+      <h2> Intelligent Alert System </h2 >
+      <p>  </p>
+      <p>  </p>
+      <p>  </p>
+      <p>  </p>
+    </div>
+
+    <div class="feature-card">
+      <h2> User-Friendly Reporting Dashboard </h2 >
+      <p>  </p>
+      <p>  </p>
+      <p>  </p>
+      <p>  </p>
+    </div>
+
+    <div class="feature-card">
+      <h2> Profitability Analysis Tool </h2 >
+      <p>  </p>
+      <p>  </p>
+      <p>  </p>
+      <p>  </p>
+    </div>
   </section>
 
   <section class="visual">
