--- a/index.html
+++ b/index.html
@@ -21,44 +21,39 @@
   </header>
 
   <section class="features">
+    <h2 class = "section-title"> FEATURES </h2>
+
     <div class="feature-card">
       <h2> Transaction Tracking System </h2 >
-      <p> Records all farm purchases (seeds, fertilizer, soil, etc.) </p>
-      <p> Logs all sales to markets, restaurants, or subscription boxes </p>
-      <p> Accessible via mobile phone or computer </p>
-      <p> Simple input interface for non-tech-savvy users </p>
+      <p> Log every sale and purchase with a few taps. No spreadsheets, no paper records—just a clean digital log of all your farm's money in and out. </p>
+
+      <hr class = "divider-feature">
+
+      <p> + Records all farm purchases (seeds, fertilizer, soil, etc.) </p>
+      <p> + Logs all sales to markets, restaurants, or subscription boxes </p>
+      <p> + Organizes expenses by category automatically </p>
     </div>
 
     <div class="feature-card">
-      <h2> A.I. Powered Analytics Engine </h2 >
-      <p>  </p>
-      <p>  </p>
-      <p>  </p>
-      <p>  </p>
+      <h2> A.I. Profit Analyzer </h2 >
+      <p> The system automatically calculates which crops make you the most money, your exact costs per plant, and seasonal trends—so you know what’s working without doing the math. </p>
+
+      <hr class = "divider-feature">
+
+      <p> + Calculates true cost per plant including seeds, soil, water, labor </p>
+      <p> + Compares profitability across seasons </p>
+      <p> + Identifies your most loyal (and profitable) customers </p>
     </div>
 
     <div class="feature-card">
       <h2> Intelligent Alert System </h2 >
-      <p>  </p>
-      <p>  </p>
-      <p>  </p>
-      <p>  </p>
-    </div>
+      <p> Get notified when a crop is underperforming, costs spike, or demand is high. It tells you what to plant more of and what to avoid, like a 24/7 farm advisor in your pocket. </p>
 
-    <div class="feature-card">
-      <h2> User-Friendly Reporting Dashboard </h2 >
-      <p>  </p>
-      <p>  </p>
-      <p>  </p>
-      <p>  </p>
-    </div>
+      <hr class = "divider-feature">
 
-    <div class="feature-card">
-      <h2> Profitability Analysis Tool </h2 >
-      <p>  </p>
-      <p>  </p>
-      <p>  </p>
-      <p>  </p>
+      <p> + Gets smarter over time — learns your farm’s patterns </p>
+      <p> + Sends SMS or app notifications so you don’t miss important updates </p>
+      <p> + Flags cash flow risks (like late-paying buyers) </p>
     </div>
   </section>
 
