--- a/index.html
+++ b/index.html
@@ -58,7 +58,28 @@
   </section>
 
   <section class="visual">
-    <img src="path-to-image.jpg" alt="Product Preview">
+    <h2 class = "section-title"> PRODUCT PREVIEW </h2>
+
+    <div class = "visual-card"> 
+    <h2> Placeholder Description </h2>
+    <img src = "images/placeholder.png" alt="Product Preview">
+    </div>
+
+    <div class = "visual-card"> 
+    <h2> Placeholder Description </h2>
+    <img src = "images/placeholder.png" alt="Product Preview">
+    </div>
+
+    <div class = "visual-card">
+    <h2> Placeholder Description </h2>
+    <img src = "images/placeholder.png" alt="Product Preview">
+    </div>
+
+    <div class = "visual-card">
+    <h2> Placeholder Description </h2>
+    <img src = "images/placeholder.png" alt="Product Preview">
+    </div>
+   
   </section>
 
   <section class="info">
