--- a/index.html
+++ b/index.html
@@ -80,19 +80,58 @@
     <img src = "images/placeholder.png" alt="Product Preview">
     </div>
    
+    <div class = "visual-card">
+    <h2> Placeholder Description </h2>
+    <img src = "images/placeholder.png" alt="Product Preview">
+    </div>
   </section>
 
   <section class="info">
-    <h2>Why Choose Us?</h2>
-    <p>Some information about benefits or details…</p>
-  </section>
+      <div class = "info-img">
+        <img src = "images/greenhouse.jpg" alt = "Greenhouse">
+      </div>
 
-  <section class="cta-final">
-    <button class="cta">Sign Up Now</button>
+      <div class = "info-text">
+        <h2> Why Choose GreenSense? </h2>
+
+        <hr class = "divider-info">
+
+        <p> Choose GreenSense because it is the only platform built from the ground up for small-scale greenhouse farmers like you. We understand the daily challenges of tight margins, unpredictable costs, and the guesswork in planning. Unlike complicated spreadsheets or expensive industrial software, GreenSense transforms your everyday purchases and sales into clear, actionable insights. Our AI-powered analysis automatically identifies your most profitable crops, pinpoints wasteful spending, and provides personalized alerts to help you prevent losses and capitalize on opportunities. </p>
+        <p> With GreenSense, you gain a dedicated partner that works 24/7 to give you financial clarity and confidence. It saves you time, reduces waste, and puts data-driven decision-making at your fingertips—no technical expertise required. Ultimately, we empower you to farm smarter, not harder, so you can increase your profits and grow your business with peace of mind. </p>
+
+        <section class="cta-final">
+          <button class="cta">Sign Up Now</button>
+        </section>
+      </div>
   </section>
 
   <footer>
-    <p>© 2025 My Company. All rights reserved.</p>
+    <div class="foot-left">
+      <div class = "foot-logo">
+        <img src = "images/logoNoBG.png" alt = "Logo">
+      </div>
+      
+      <div class = "Logo-Name"> <h2> GreenSense </h2> </div>
+    </div>
+
+    <div class = "foot-mid">
+    
+      <p>© 2025 My Company. All rights reserved.</p>
+    </div>
+
+    <div class = "foot-right">
+      <div class = "foot-social">
+        <a href = "https://github.com/BorDomms" target = "_blank" alt = "GitHub"> <img src = "images/GitHubLogo.png"> </a>
+      </div>
+
+      <div class = "foot-social">
+        <a href = "https://www.facebook.com/kylelimjap/" target = "_blank" alt = "FaceBook"> <img src = "images/FBLogo.png"> </a>
+      </div>
+
+      <div class = "foot-social">
+        <a href = "https://www.instagram.com/dominic_limjap/" target = "_blank" alt = "Instagram"> <img src = "images/InstaLogo.png"> </a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
