--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <div class = "foot-mid">
     
-      <p>© 2025 My Company. All rights reserved.</p>
+      <p>© 2025 GreenSense. All rights reserved.</p>
     </div>
 
     <div class = "foot-right">
